# nhanes-dl

./: .gitignore  README.md  TODO  pytest.ini  requirements.txt  setup.cfg  temp.py
.github/workflows/: python-test.yml
nhanes_dl/: __main__.py  download.py  types.py  utils.py
src/nhanes_dl/: download.py  types.py
src/nhanse_dl/: download.py
src/tests/: test_download.py  test_types.py
tests/: test_download.py  test_types.py
