[metadata]
name=nhanes-dl
version = 0.0.4
description = A python library for downloading Continous NHANES data into panda dataframes
long_description = file: README.md, LICENSE
keywords = nhanes
license = MIT
    
[options]
python_reqiures = >= 3.8
install_requires =
    pandas >= "1.4.2"

packages=find:


[options.packages.find]
include=nhanes_dl*