[metadata]
name=nhanes-dl
version = 0.0.6
description = A python library for downloading Continous NHANES data into panda dataframes
long_description = file: README.md
long_description_content_type = text/markdown
keywords = nhanes
license = MIT
project_urls =
    Bug Tracker = https://github.com/LeviButcher/nhanes-dl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
[options]
python_requires = >=3.6
install_requires =
    pandas >= "1.4.2"
package_dir =
    = src
packages = find:

[options.packages.find]
where = src